--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: animated_splash_screen
 description: The easiest way to create your animated splash screen in a fully customizable way.
-version: 1.0.1+1
+version: 1.0.1+2
 homepage: https://github.com/clean-code-dev/animated_splash_screen
 
 environment:
@@ -9,9 +9,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  page_transition: ^1.1.6
+  page_transition: ^1.1.7+2
 
 dev_dependencies:
+  pedantic: ^1.9.0
   flutter_test:
     sdk: flutter
 
