--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,12 +4,12 @@ version: 1.0.1+2
 homepage: https://github.com/clean-code-dev/animated_splash_screen
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  page_transition: ^1.1.7+2
+  page_transition:  2.0.1-nullsafety.0
 
 dev_dependencies:
   pedantic: ^1.9.0
