--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  page_transition: ^2.0.1-nullsafety.0
+  page_transition: ^2.0.0
 
 dev_dependencies:
   pedantic: ^1.9.0
