--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: animated_splash_screen
 description: The easiest way to create your animated splash screen in a fully customizable way.
-version: 1.1.0-nullsafety.0
+version: 1.2.0
 homepage: https://github.com/clean-code-dev/animated_splash_screen
 
 environment:
@@ -9,7 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  page_transition: ^2.0.0
+  page_transition: ^2.0.5
 
 dev_dependencies:
   pedantic: ^1.9.0
